--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+  <meta charset="utf-8">
+  <title>Rayshaun's Resume</title>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="cigars.html">Cigars facts</a></li>
+        <li><a href="resume.html">Rayshaun's Resume</a></li>
+        <li><a href="porsche.992.gt3.rs.html">Porsche Facts</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h1>Rayshaun's Resume</h1>
+
+  <section>
+    <h2>Education</h2>
+    <ul>
+      <li>Harold Washington Community College Chicago, IL Associates degree computer science GPA 3.0</li>
+      <li>Bachelors's in Information Technology and Management at Illinois Institute Of Technology</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Gary comer College prep</h2>
+    <ul>
+      <li>Member of the chest club</li>
+      <li>Cumaltive gpa 3.0</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Experience</h2>
+    <h3>Volunteer</h3>
+    <ul>
+      <li>Gary Comer Youth Center</li>
+      <li>One summer of chicago</li>
+      <li>Chicago police department engagement leader</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Skills</h3>
+    <ul>
+      <li>Java Script</li>
+      <li>Linux, MAC OS</li>
+      <li>Leadship</li>
+      <li>organization</li>
+      <li>Listening and obtaining information</li>
+      <li>subline text</li>
+      <li>Gaming Design</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Contact Information</h2>
+    <p><a href="www.linkedin.com/in/rayshaun-alexander-7a3417168">LinkedIn</a></p>
+    <address>
+      Email: <a href="mailto:ralexander2@hawk.iit.edu">ralexander2@hawk.iit.edu</a>
+    </address>
+  </section>
+
+  <footer>
+    <p>Written By Rayshaun Alexander</p>
+  </footer>
+</body>
+</html>
 
