--- a/cigars2.html
+++ b/cigars2.html
@@ -8,9 +8,9 @@
   <header>
     <nav>
       <ul>
-        <li><a href="cigars.html">Cigar facts</a></li>
+        <li><a href="cigars.2html">Cigar facts</a></li>
         <li><a href="resume.html">Rayshaun's Resume</a></li>
-        <li><a href="porsche.992.gt3.rs.html">Porsche Facts</a></li>
+        <li><a href="porsche.992.gt3.rs.2.html">Porsche Facts</a></li>
       </ul>
     </nav>
   </header>
