--- a/cigars2.html
+++ b/cigars2.html
@@ -2,50 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Cigar facts</title>
+  <title>cigar Facts</title>
+  <link rel="stylesheet" href="css/style3.css"> 
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="cigars.2html">Cigar facts</a></li>
-        <li><a href="resume.html">Rayshaun's Resume</a></li>
-        <li><a href="porsche.992.gt3.rs.2.html">Porsche Facts</a></li>
-      </ul>
-    </nav>
+  <header id="main-header">
+    <div class="nav-container">
+      <nav class="navigation">
+	<ul>
+          <li><a href="cigar2.html">cigar facts</a></li>
+          <li><a href="resume.html">Rayshaun's Resume</a></li>
+          <li><a href="porsche.992.gt3.rs.2.html">Porsche Facts</a></li>
+	</ul>
+      </nav>
+    </div>
   </header>
   <div>
     <h1>Top cigar choices</h1>
-    <p>Rayshaun Alexnader</p>
-    <p>Popularity of chigars and ancient history</p>
+  </div>
+   <div id="box1">
+    <p>Popularity of chigars and ancient history.</p>
   </div>
   <section>
-     <h2>1.The Dominican Republic is the largest producer of premium cigars, known for creating smooth and mild blends favored by many enthusiasts.</h2>
-     <img src="media/image4.png" alt="Popular cigar choices" >
-     <p>Nicaraguan cigars have gained popularity for their bold, spicy profiles, with rich tobacco grown in volcanic soil that enhances flavor.</p>
-     <h2>2.Christopher Columbus and his crew introduced cigars to Europe after encountering tobacco during their expeditions to the Americas in the 15th century.</h2>
-     <img src="media/image5.png" alt="Cigars merch">
-     <p>Cigars date back to ancient civilizations, with early versions smoked by the Mayans and indigenous peoples of the Caribbean over a thousand years ago.</p>
+    <h2>1.The Dominican Republic is the largest producer of premium cigars, known for creating smooth and mild blends favored by many enthusiasts.</h2>
+    <img src="media/image4.jpg" alt="Popular cigar choices">
+    <div id= "box2">
+    <p>Nicaraguan cigars have gained popularity for their bold, spicy profiles, with rich tobacco grown in volcanic soil that enhances flavor.</p>
+    </div>
+    <h2>2.Christopher Columbus and his crew introduced cigars to Europe after encountering tobacco during their expeditions to the Americas in the 15th century.</h2>
+    <img src="media/image5.jpg" alt="Cigars merch.">
+    <div id="box3">
+    <p>Cigars date back to ancient civilizations, with early versions smoked by the Mayans and indigenous peoples of the Caribbean over a thousand years ago.</p>
+    </div>
   </section> 
     
   <section>
     <h2>3.Cigar construction involves three main components: the filler, binder, and wrapper, each playing a crucial role in the flavor and burn of the cigar.</h2>
-    <img src="media/image6.png" alt="creation of cigars">
+    <img src="media/image6.jpg" alt="creation of cigars.">
+    <div id="box7">
     <p>Cigars are a top tobocco sold throughtout the US</p>
+    </div>
   </section>
   
   <section>
     <h2>4.Montecristo is a legendary brand with Cuban roots, known for its balanced medium-bodied cigars that appeal to both beginners and seasoned smokers.</h2>
-    <img src="media/image7.png" alt="Popular images of cigar smokers">
-    <p> Rocky Himself</p>     
+    <img src="media/image7.jpg" alt="Popular images of cigar smokers">
+    <div id="box4">
+    <p> Rocky Himself</p>
+    </div>
   </section>
   
   <section>
     <h2>5.Cuban cigars, often considered the finest in the world, are renowned for their exceptional craftsmanship and rich, complex flavors.</h2>
     <img src="media/image8.png" alt="icons cigars">
+    <div id="box5">
     <p>The Dominican Republic is the largest producer of premium cigars, known for creating smooth and mild blends favored by many enthusiasts.</p>
+    </div>
     <h2>Conclusion</h2>
-    <p> Oliva Serie V is a favorite among aficionados for its full-bodied strength and notes of rich dark chocolate and spice, made from premium Nicaraguan tobacco.</p>
+    <div id="box6">
+    <p>Oliva Serie V is a favorite among aficionados for its full-bodied strength and notes of rich dark chocolate and spice, made from premium Nicaraguan tobacco.</p>
+    </div>
   </section>
+  <footer>
+    <p>Plublished by Rayshaun A</p>
+  </footer>
 </body>
 </html>
