--- a/resume.html
+++ b/resume.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Rayshaun's Resume</title>
+  <title>Rayshaun Alexander Resume</title>
+  <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="cigars.html">Cigars facts</a></li>
-        <li><a href="resume.html">Rayshaun's Resume</a></li>
-        <li><a href="porsche.992.gt3.rs.html">Porsche Facts</a></li>
-      </ul>
-    </nav>
+  <header id="main-header">
+    <div class="nav-container">
+      <nav class="navigation">
+        <ul>
+          <li><a href="cigar2.html">cigar facts</a></li>
+          <li><a href="resume.html">Rayshaun's Resume</a></li>
+          <li><a href="porsche.992.gt3.rs.2.html">Porsche Facts</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <h1>Rayshaun's Resume</h1>
+    <div id="box1">
+      <h1>Rayshaun's Resume</h1>
+    </div>
 
   <section>
+  <div id="box2">
     <h2>Education</h2>
     <ul>
       <li>Harold Washington Community College Chicago, IL Associates degree computer science GPA 3.0</li>
       <li>Bachelors's in Information Technology and Management at Illinois Institute Of Technology</li>
     </ul>
-  </section>
-
-  <section>
     <h2>Gary comer College prep</h2>
     <ul>
       <li>Member of the chest club</li>
       <li>Cumaltive gpa 3.0</li>
     </ul>
+  </div>
   </section>
 
   <section>
+   <div id="box3">
     <h2>Experience</h2>
     <h3>Volunteer</h3>
     <ul>
@@ -40,9 +45,6 @@
       <li>One summer of chicago</li>
       <li>Chicago police department engagement leader</li>
     </ul>
-  </section>
-
-  <section>
     <h3>Skills</h3>
     <ul>
       <li>Java Script</li>
@@ -53,11 +55,12 @@
       <li>subline text</li>
       <li>Gaming Design</li>
     </ul>
+  </div>
   </section>
 
   <section>
     <h2>Contact Information</h2>
-    <p><a href="www.linkedin.com/in/rayshaun-alexander-7a3417168">LinkedIn</a></p>
+    <p><a href="www.linkedin.com/in/rayshaun-alexander-7a3417168">LinkedIn" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
     <address>
       Email: <a href="mailto:ralexander2@hawk.iit.edu">ralexander2@hawk.iit.edu</a>
     </address>
@@ -68,4 +71,3 @@
   </footer>
 </body>
 </html>
-
