--- a/porsche.992.gt3.rs.2.html
+++ b/porsche.992.gt3.rs.2.html
@@ -1,40 +1,55 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Websites</title>
+  <title>Porsche</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="cigars.html">cigar facts</a></li>
-        <li><a href="resume.html">Rayshaun's Resume</a></li>
-        <li><a href="porsche.992.gt3.rs.html">Porsche Facts</a></li>
-      </ul>
-    </nav>
+  <header id="main-header">
+    <div class="nav-container">
+      <nav class="navigation">
+        <ul>
+          <li><a href="cigar2.html">Cigar facts</a></li>
+          <li><a href="resume.html">Rayshaun's Resume</a></li>
+          <li><a href="porsche.992.gt3.rs.2.html">Porsche Facts</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <h1>Just how fast is a porsche 992 gt3 rs</h1>
+  <div class="content-wrapper">
+    <header id="header">
+    <a id="image1.jpg" href="https://github.com/Ralex22/webdev_project2"> 
+    </a>
+    </header> 
+  </div> 
+    <header class="header">
+  <div class="header">
+  <h1 class="page-title">Just how fast is a porsche 992 gt3 rs</h1>
+  </div>
+    </header>
   <section>
-    <img src="media/image1.png" alt="Close up look of a porsche 992" >
+    <img src="media/image1.jpg" alt="Close up look of a porsche 992" >
     <h3>The story behind a truly magnificent sports car</h3>
     <p>The Porsche 992 GT3 RS was developed with a focus on track performance, integrating advanced aerodynamics and motorsport technology.</p> 
-    <p>Porsche engineers implemented a comprehensive cooling system, including additional air vents and active aerodynamics for optimal thermal management during high-speed driving.</p>
-    <img src="media/image2.png" alt="A closer look at the engine inside of a impressive modified porsche">
-    <p>Above shows an image of what a porsche engine looks like</p>
-    <h2>Additional Facts About Porsche</h2>
-    <img src="media/image3.png" alt="A complete inventory of different models of the supercar">
-    <p>The 992 GT3 RS incorporates lightweight materials such as carbon fiber-reinforced plastic (CFRP) to reduce overall weight and enhance agility on the track.</p>
+    <p>Porsche engineers implemented a comprehensive cooling system, including additional air vents and active aerodynamics for optimal thermal management during high-speed drivin.</p>
+    <div id="img2">
+      <img src="media/image2.jpg" alt="A closer look at the engine inside of a impressive modified porsche">
+    </div> 
+      <p>Above shows an image of what a porsche engine looks like.</p>
+      <h2>Additional Facts About Porsche</h2>
+        <img src="media/image3.jpg" alt="A complete inventory of different models of the supercar">
+        <p>The 992 GT3 RS incorporates lightweight materials such as carbon fiber-reinforced plastic (CFRP) to reduce overall weight and enhance agility on the track</p> 
     <ul>
       <li>The Porsche 992 GT3 RS was born from decades of motorsport experience, directly influenced by Porsche’s racing program, particularly in the 24 Hours of Le Mans.</li>
       <li>Engineers designed the 992 GT3 RS to maximize downforce, employing an active rear wing and front aerodynamic elements inspired by race cars.</li>
       <li>Porsche's use of rear-wheel steering in the 992 enhances maneuverability at low speeds and stability at high speeds, providing both performance and daily driving comfort.</li>
     </ul>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/xwWYZ8yDFEY?si=wEjRbYE2QVD9RXAe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h3>Overall Conclusion</h3>
-    <p>The Porsche 992 GT3 RS offers an unparalleled blend of cutting-edge motorsport technology, precision engineering, and exhilarating performance, making it the ultimate track-inspired sports car. If you’re looking for unmatched driving dynamics, superior craftsmanship, and a car built for both the road and the racetrack, the 992 GT3 RS is the perfect choice.</p>
-    <p>publised by Rayshaun Alexander</p>
-  </section>
+    <h3>Ultimately</h3>
+    <p>The Porsche 992 GT3 RS offers an unparalleled blend of cutting-edge motorsport technology, precision engineering, and exhilarating performance,making it the ultimate track-inspired sports car. If you’re looking for unmatched driving dynamics, superior craftsmanship, and a car built for both the road and the racetrack, the 992 GT3 RS is the perfect choice.</p>
+  <footer>
+    <p>Plublished by Rayshaun Alexander</p>
+  </footer>
+</section>
 </body>
 </html>
-
