--- a/cigars2.html
+++ b/cigars2.html
@@ -10,7 +10,7 @@
     <div class="nav-container">
       <nav class="navigation">
 	<ul>
-          <li><a href="cigar2.html">cigar facts</a></li>
+          <li><a href="cigars2.html">cigar facts</a></li>
           <li><a href="resume.html">Rayshaun's Resume</a></li>
           <li><a href="porsche.992.gt3.rs.2.html">Porsche Facts</a></li>
 	</ul>
