--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Rayshaun Alexander Resume</title>
-  <link rel="stylesheet" href="css/red.css">
+  <link rel="stylesheet" href="css/orange.css">
 </head>
 <body>
   <header id="main-header">
