--- a/porsche.992.gt3.rs.2.html
+++ b/porsche.992.gt3.rs.2.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Porsche</title>
-  <link rel="stylesheet" href="css/orange.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header id="main-header">
