--- a/cigars2.html
+++ b/cigars2.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>cigar Facts</title>
-  <link rel="stylesheet" href="css/style.css"> 
+  <link rel="stylesheet" href="css/style.css">
+  link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
 <body>
   <header id="main-header">
