--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Rayshaun Alexander Resume</title>
   <link rel="stylesheet" href="css/style.css">
+  link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
 <body>
   <header id="main-header">
