--- a/porsche.992.gt3.rs.2.html
+++ b/porsche.992.gt3.rs.2.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>Porsche</title>
   <link rel="stylesheet" href="css/style.css">
-  link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
 <body>
   <header id="main-header">
