--- a/cigars2.html
+++ b/cigars2.html
@@ -55,7 +55,7 @@
   
   <section>
     <h2>5.Cuban cigars, often considered the finest in the world, are renowned for their exceptional craftsmanship and rich, complex flavors.</h2>
-    <img src="media/image8.png" alt="icons cigars">
+    <img src="media/image8.jpg" alt="icons cigars">
     <div id="box5">
     <p>The Dominican Republic is the largest producer of premium cigars, known for creating smooth and mild blends favored by many enthusiasts.</p>
     </div>
