--- a/porsche.992.gt3.rs.2.html
+++ b/porsche.992.gt3.rs.2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head>
+html<head>
   <meta charset="utf-8">
   <title>Porsche</title>
   <link rel="stylesheet" href="css/style.css">
