--- a/porsche.992.gt3.rs.2.html
+++ b/porsche.992.gt3.rs.2.html
@@ -48,7 +48,7 @@
     </ul>
     <!-- Video -->
     <div class="video-container box-size">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/xwWYZ8yDFEY" title="Porsche 992 GT3 RS - HOWLING 9000RPM TOP SPEED Run on Autobahn" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xwWYZ8yDFEY" title="Porsche 992 GT3 RS - HOWLING 9000RPM TOP SPEED Run on Autobahn" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <h3>Ultimately</h3>
     <p>The Porsche 992 GT3 RS offers an unparalleled blend of cutting-edge motorsport technology, precision engineering, and exhilarating performance,making it the ultimate track-inspired sports car. If you’re looking for unmatched driving dynamics, superior craftsmanship, and a car built for both the road and the racetrack, the 992 GT3 RS is the perfect choice.</p>
