--- a/cigars2.html
+++ b/cigars2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>cigar Facts</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
