--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     </div>
   </header>
   <div class="content-wrapper">
-    <header id="header">
+  <header id="header">
     <a id="image1.jpg" href="https://github.com/Ralex22/webdev_project2"> 
-    </a>
-    </header> 
+  </a>
+  </header> 
   </div> 
-    <header class="header">
+  <header class="header">
   <div class="header">
   <h1 class="page-title">Just how fast is a porsche 992 gt3 rs</h1>
   </div>
-    </header>
-  <section>
+  </header>
     <img src="media/image1.jpg" alt="Close up look of a porsche 992" >
-    <h3>The story behind a truly magnificent sports car</h3>
-    <p>The Porsche 992 GT3 RS was developed with a focus on track performance, integrating advanced aerodynamics and motorsport technology.</p> 
-    <p>Porsche engineers implemented a comprehensive cooling system, including additional air vents and active aerodynamics for optimal thermal management during high-speed drivin.</p>
+      <h3>The story behind a truly magnificent sports car</h3>
+      <p>The Porsche 992 GT3 RS was developed with a focus on track performance, integrating advanced aerodynamics and motorsport technology.</p> 
+      <p>Porsche engineers implemented a comprehensive cooling system, including additional air vents and active aerodynamics for optimal thermal management during high-speed drivin.</p>
     <div id="img2">
       <img src="media/image2.jpg" alt="A closer look at the engine inside of a impressive modified porsche">
     </div> 
       <p>Above shows an image of what a porsche engine looks like.</p>
+    <section>
       <h2>Additional Facts About Porsche</h2>
         <img src="media/image3.jpg" alt="A complete inventory of different models of the supercar">
         <p>The 992 GT3 RS incorporates lightweight materials such as carbon fiber-reinforced plastic (CFRP) to reduce overall weight and enhance agility on the track</p> 
@@ -46,10 +46,11 @@
       <li>Engineers designed the 992 GT3 RS to maximize downforce, employing an active rear wing and front aerodynamic elements inspired by race cars.</li>
       <li>Porsche's use of rear-wheel steering in the 992 enhances maneuverability at low speeds and stability at high speeds, providing both performance and daily driving comfort.</li>
     </ul>
+    </section>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/xwWYZ8yDFEY?si=wEjRbYE2QVD9RXAe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>Ultimately</h3>
     <p>The Porsche 992 GT3 RS offers an unparalleled blend of cutting-edge motorsport technology, precision engineering, and exhilarating performance,making it the ultimate track-inspired sports car. If you’re looking for unmatched driving dynamics, superior craftsmanship, and a car built for both the road and the racetrack, the 992 GT3 RS is the perfect choice.</p>
-  <footer>
+    <footer>
     <p>Plublished by Rayshaun Alexander</p>
   </footer>
 </section>
